--- a/themes/portio/assets/scss/components/_hero-section.scss
+++ b/themes/portio/assets/scss/components/_hero-section.scss
@@ -1,6 +1,7 @@
 .hero {
   padding: 220px 0 100px;
   position: relative;
+  z-index: 0;
   overflow: hidden;
   @include desktop {
     padding: 160px 0 60px;
