--- a/themes/portio/assets/scss/components/_page-title.scss
+++ b/themes/portio/assets/scss/components/_page-title.scss
@@ -1,6 +1,7 @@
 .breadCrumb {
     padding: 200px 0 0;
     position: relative;
+    z-index: 0;
     overflow: hidden;
     &__blob {
         position: absolute;
