--- a/themes/portio/assets/scss/components/_single-blog-post.scss
+++ b/themes/portio/assets/scss/components/_single-blog-post.scss
@@ -6,6 +6,7 @@
         overflow: hidden;
         &__feature {
             position: relative;
+            z-index: 0;
             margin: 0 100px;
             @include desktop {
                 margin: 0;
